# wildbook-ia

./: .dockerignore  Architecture.md  Dockerfile  README.rst  build_guide.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-publish-arm64.yaml  docker-publish.yaml  python-publish.yml  testing.yml
_dev/: super_setup.py
devops/: Dockerfile  build.sh  install.ubuntu.sh
devops/_config/: setup.sh
devops/base/: Dockerfile
devops/develop/: Dockerfile
devops/provision/: Dockerfile
flask_restx_patched/: api.py  model.py  namespace.py
requirements/: build.txt  dev.txt  pinned.txt  runtime.txt
tests/: test_job_store.py
wbia/: __main__.py  annots.py  constants.py  core_annots.py  core_images.py  dev.py  images.py
wbia/algo/: Config.py
wbia/algo/detect/: __init__.py  densenet.py  efficientnet.py
wbia/algo/graph/: mixin_matching.py  orig_graph_iden.py
wbia/algo/hots/: debug_log.py  pipeline.py
wbia/control/: IBEISControl.py  _sql_helpers.py  controller_inject.py  manual_annot_funcs.py  manual_image_funcs.py
wbia/other/: detecttrain.py
wbia/scripts/: specialdraw.py
wbia/viz/: viz_matches.py
wbia/web/: __init__.py  apis.py  apis_detect.py  apis_engine.py  apis_json.py  apis_microsoft.py  apis_query.py  app.py  appfuncs.py  job_engine.py  job_store.py  prometheus.py  routes.py
