[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildbook-ia"
version = "3.7.2"
description = "Wildbook IA (WBIA) - Machine learning service for the WildBook project"
authors = [
    {name = "Wild Me Developers", email = "dev@wildme.org"}
]
license = {text = "Apache License 2.0"}
readme = "README.rst"
requires-python = ">=3.7"
keywords = [
    "wildbook", "wildme", "ibeis", "ecological", "wildlife",
    "conservation", "machine learning", "ai", "hotspotter",
    "detection", "classification", "animal ID", "re-id"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "flask>=2.0.0",
    "requests>=2.25.0"
]

[project.optional-dependencies]
all = [
    "torch==1.12.1",
    "torchvision",
    "torchaudio"
]
postgres = [
    "psycopg2-binary"
]

[project.scripts]
wbia-init-testdbs = "wbia.cli.testdbs:main"
wbia-convert-hsdb = "wbia.cli.convert_hsdb:main"
wbia-migrate-sqlite-to-postgres = "wbia.cli.migrate_sqlite_to_postgres:main"
wbia-compare-databases = "wbia.cli.compare_databases:main"

[project.urls]
Homepage = "https://github.com/WildMeOrg/wildbook-ia"
Repository = "https://github.com/WildMeOrg/wildbook-ia"
Issues = "https://github.com/WildMeOrg/wildbook-ia/issues"
Funding = "https://www.wildme.org/donate/"

[tool.setuptools.packages.find]
where = ["."]
include = ["wbia*"]

[tool.setuptools.package-data]
wbia = ["**/*.so", "**/*.pyx", "**/*.pxd", "**/*.h"]